refactor(engine): Make internal constants private